# fluidity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: example-scene.yaml  example-scene.yml
shaders/: bigaussian_filter.frag  bilateral_filter.frag  caustics-pass.frag  caustics-polygon.frag  caustics-polygon.geom  caustics-polygon.vert  composition-pass.frag  curvature_flow_filter.frag  depth-pass.frag  dual-normal-pass.frag  filter-narrow-range.frag  fluid-shadow-dual.frag  fluid-shadow.frag  fluid-shadow.fs  inverter.frag  mesh copy.frag  mesh-shadow.frag  mesh-shadow.vert  mesh.frag  mesh.vert  narrow_range_filter.frag  particle.frag  quad_rendering.frag  quad_rendering.vert  skybox.frag  skybox.vert  sphere_rendering.frag  sphere_rendering.vert  surface_rendering.frag  surface_rendering.vert  surface_rendering_refactored.frag  surface_rendering_refactored.vert  texture_rendering.frag  texture_rendering.vert
src/: Fluid.cpp  Fluid.hpp  Vec.hpp  main.cpp  vec.hpp
src/input/: game_controller.cpp  game_controller.hpp
src/renderer/: depth_pass.cpp  depth_pass.hpp  filter_pass.cpp  filter_pass.hpp  fluid_renderer.cpp  fluid_renderer.h  fluid_renderer.hpp  fluid_surfaces_renderer.cpp  fluid_surfaces_renderer.h  framebuffer.cpp  framebuffer.hpp  generic_fluid.hpp  mesh.cpp  mesh.hpp  meshes_pass.cpp  meshes_pass.hpp  model.cpp  model.hpp  narrow_range_filter_pass.cpp  narrow_range_filter_pass.hpp  npz_fluid.cpp  npz_fluid.hpp  paricle_render_pass.hpp  particle_pass.cpp  particle_pass.hpp  particle_render_pass.cpp  particle_render_pass.hpp  playback_manager.hpp  render_pass.cpp  render_pass.hpp  renderer.h  rendering_parameters.hpp  scene.cpp  scene.hpp  shader.cpp  shader.h  skybox.cpp  skybox.hpp  surface_smoothing_pass.cpp  surface_smoothing_pass.h  (+6 more)
src/simulation/: simulated_fluid.cpp  simulated_fluid.hpp
src/utils/: camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  glcall.h  gui_layer.cpp  gui_layer.hpp  opengl_utils.cpp  opengl_utils.hpp
